[package]
name = "wgpu-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
fs-err = "2.6.0"
log = "0.4.14"
pollster = "0.2.4"
simplelog = "0.11.1"
wgpu = "0.12.0"
winit = "0.26.0"

[features]
